--- a/QC_Toray_App_v3/LotOverviewUserControl.xaml
+++ b/QC_Toray_App_v3/LotOverviewUserControl.xaml
@@ -59,7 +59,7 @@
             </Grid.RowDefinitions>
             <Border Grid.Row="0" Background="#FFFAFAFA" Margin="30" CornerRadius="5" Width="450">
                 <StackPanel Name="stackLotNo" Orientation="Horizontal" HorizontalAlignment="Center" Height="60" Margin="5,0">
-                    <Label Content="Sample No. :" VerticalAlignment="Center"/>
+                    <Label Content="Lot. No. :" VerticalAlignment="Center"/>
                     <Border CornerRadius="5" BorderBrush="Gray" BorderThickness="0.5" Height="42" Margin="30,0,0,0">
                         <TextBox Name="txbLot" 
                                  VerticalAlignment="Center" 
