--- a/QC_Toray_App_v3/OperationUserControl.xaml
+++ b/QC_Toray_App_v3/OperationUserControl.xaml
@@ -55,7 +55,7 @@
                 </Border>
                 <!--Column 2-->
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="100,0,0,0" Grid.Column="2" Height="16" Width="27" Foreground="#FF000000">Date:</TextBlock>
-                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="100,0,0,0" Grid.Column="2" Grid.Row="1" Height="16" Width="52" Foreground="#FF000000">Q'ty label:</TextBlock>
+                <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="100,0,0,0" Grid.Column="2" Grid.Row="1" Height="16" Width="52" Foreground="#FF000000">Status: </TextBlock>
                 <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="100,0,0,0" Grid.Column="2" Grid.Row="2" Height="16" Width="50" Foreground="#FF000000">M/C. No.:</TextBlock>
                 <!--Column 3-->
                 <Border BorderThickness="0.5" BorderBrush="#FF675656" Margin="15,8" Grid.Column="3" Width="180" CornerRadius="5">
@@ -63,8 +63,9 @@
                                HorizontalAlignment="Center" VerticalAlignment="Center" />
                 </Border>
                 <Border BorderThickness="0.5" BorderBrush="#FF675656" Margin="15,8" Grid.Column="3" Grid.Row="1" Width="180" CornerRadius="5">
-                    <TextBlock x:Name="txblLabel" Foreground="#FF000000" 
-                               HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    <TextBlock x:Name="txblConnectionStatus" Foreground="#FF000000" 
+                               HorizontalAlignment="Center" VerticalAlignment="Center"
+                               Text="{Binding ConnectionStatus}"/>
                 </Border>
                 <Border BorderThickness="0.5" BorderBrush="#FF675656" Margin="15,8" Grid.Column="3" Grid.Row="2" Width="180" CornerRadius="5">
                     <TextBlock x:Name="txblMcNo" Foreground="#FF000000" 
